# zx99

./: .gitignore  Dockerfile_API  Dockerfile_WEB  IS projekt.postman_collection.json  LICENSE  README.md  docker-compose.yml  images.dvc  pyproject.toml
.dvc/: config
api/: app.py  requirements.txt
client/: package-lock.json
client/public/: index.html
client/src/: App.js  index.css  index.js
client/src/components/: About.css  Facts.css  Facts.js  Header.css  ImageUploader.css  ImageUploader.js  header.js
docs/: diagram.drawio
mobile/mobile/: App.js  Readme.md  package-lock.json  package.json
mobile/mobile/components/: About.css  About.js  Facts.js  Header.css  ImageUploader.css  ImageUploader.js  header.js
model/: data.py
